# ODW-Service

./: .checkov.yaml  .gitignore  .pre-commit-config.yaml  .tflint.hcl  LICENSE  README.md  TemplateParameterOverridesForWorkspace.json  azure-pipelines.yml  create_e2e_test_results_table.sql  pyproject.toml  setup.cfg  template-parameters-definition.json  test-file.txt
.github/: CODEOWNERS  dependabot.yml
DaRT/: dart_sql.sql  function_app.py
ER-Diagrams/: employee_hierarchy_erd.md
data-models/: appeal-document.md  appeal-event-estimate.md  appeal-event.md  appeal-has.md  appeal-representation.md  appeals_representation  appeals_representation.md  curated_erd.drawio  entity-process.md  entraid-users.md  listed-building.md  nsip-exam-timetable.md  nsip-project.md  nsip-relevant-representation.md  nsip-representation.md  nsip-s51-advice.md
database/: test.json
dataset/: ds_odw_mipins_config.json  ds_odw_mipins_load_tables.json  ds_odw_mipins_tables_csv.json  ds_shpt_CaseOfficerTeams.json  ds_shpt_InspectorPostDecisionQAA.json  ds_shpt_InspectorSharepointListV2.json  dst_source_to_standardised_table_list.json  dst_standardised_to_harmonised_pipeline_list.json  dst_temp_employee_syn_dsql.json  dst_temp_employee_syn_service_json_storage.json
devops/: ODW-Release-Pipeline.json  odw-build-pipeline.yml
docs/: add_user.md  e2e-testing-framework.md  pull_request_template.md  pull_request_template.md.
function-apps/: function_app.py  requirements.txt
functions/: .funcignore  __azurite_db_blob__.json  __azurite_db_blob_extent__.json  config.py  config.yaml  datamodel-code-generator.txt  deploy.sh  function_app.py  local.settings.json  model_case_schedule.py  model_employee.py  model_interested_party.py  model_nsip.py  model_nsip_document.py  model_nsip_exam_timetable.py  model_nsip_exam_timetable_submission.py  model_nsip_project.py  (+14 more)
odw/: build-requirements.txt  pyproject.toml  readme.md  requirements.txt  setup.py
odw/core/: dummy_script.py
odw/core/nested_dummy/: inner_module.py
odw/core/util/: logging_util.py  table_util.py  util.py
odw/test/integration_test/: test_logging_util.py  test_table_util.py
odw/test/resources/: dummy.txt
odw/test/unit_test/util/: test_logging_util.py  test_table_util.py  test_util.py
odw/test/util/: config.py
odw/test/util/mock/: import_mock_notebook_utils.py
(+3498 files in other folders)
