[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "~=3.10"
pytest = "^8.4.1"
mock = "^5.2.0"
dummy-notebookutils = "^1.5.4"

[tool.poetry]
name = "odw"
version = "1.0.0"
description = "The ODW ETL Python package"
readme = "odw/readme.md"
packages = [{include = "odw"}]
exclude = [
    "odw/test"
]
