[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "odw"
dynamic = [ "version" ]

[tool.poetry.dependencies]
python = "~=3.10"
pytest = "^8.4.1"
mock = "^5.2.0"

[tool.poetry]
name = "odw"
version = "1.0.0"
description = "The ODW ETL Python package"
readme = "odw/readme.md"
packages = [{include = "odw"}]
exclude = [
    "odw/test"
]
