[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "odw"
dynamic = [ "version" ]

[tool.poetry.dependencies]
python = "~=3.10"
pytest = "^8.4.1"
mock = "^5.2.0"

[tool.poetry]
name = "odw"
version = "1.0.0"
description = "The ODW ETL Python package"
readme = "odw/readme.md"
packages = [{include = "odw"}]
exclude = [
    "odw/test"
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 150
indent-width = 4
target-version = "py310"

[tool.ruff.format]
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
