[build-system]
requires = [
    "wheel",
    "setuptools-scm[toml]>=8.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "odw"
version = "1.0.0"
requires-python = "~=3.10"
description = "The ODW ETL Python package"
license-files = ["..LICENSE"]
readme = "odw/readme.md"
dependencies = [
    "pytest==8.4.1",
    "mock==5.2.0",
    "dummy-notebookutils==1.5.4",
]
